--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-starter-kit",
-  "version": "2.0.238",
+  "version": "2.0.242",
   "private": true,
   "engines": {
     "npm": ">=8.19.0",
@@ -32,8 +32,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@uniformdev/canvas-next": "19.14.0",
-    "@uniformdev/context-react": "19.14.0",
+    "@uniformdev/canvas-next": "19.17.0",
+    "@uniformdev/context-react": "19.17.0",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "next": "13.4.0",
@@ -55,12 +55,12 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@typescript-eslint/types": "^5.59.8",
-    "@uniformdev/cli": "19.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/types": "^5.59.9",
+    "@uniformdev/cli": "19.17.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -73,6 +73,6 @@
     "storybook-addon-themes": "^6.1.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "5.0.4"
   }
 }
