--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-starter-kit",
-  "version": "2.0.242",
+  "version": "2.0.274",
   "private": true,
   "engines": {
     "npm": ">=8.19.0",
@@ -32,11 +32,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@uniformdev/canvas-next": "19.17.0",
-    "@uniformdev/context-react": "19.17.0",
+    "@uniformdev/canvas-next": "^19.24.0",
+    "@uniformdev/context-next": "^19.24.0",
+    "@uniformdev/context-react": "^19.24.0",
+    "@vercel/og": "^0.5.7",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
-    "next": "13.4.0",
+    "next": "^13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
@@ -53,15 +55,15 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/color": "^3.0.3",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.32",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@typescript-eslint/types": "^5.59.9",
-    "@uniformdev/cli": "19.17.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/types": "^5.59.11",
+    "@uniformdev/cli": "^19.24.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.6",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.11",
