--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-starter-kit",
-  "version": "3.0.8",
+  "version": "3.1.6",
   "private": true,
   "engines": {
     "npm": ">=8.19.0",
@@ -17,31 +17,36 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "pull:manifest": "uniform context manifest download --output ./src/context/manifest.json",
-    "uniform:pull:components": "uniform canvas component pull ./content/component-starter-kit.json",
-    "uniform:pull:compositions": "uniform canvas composition pull ./content/component-starter-kit.json",
-    "uniform:pull:project-map-definitions": "uniform project-map definition pull ./content/component-starter-kit.json",
-    "uniform:pull:project-map-nodes": "uniform project-map node pull ./content/component-starter-kit.json",
+    "uniform:pull:datatype": "uniform canvas datatype pull ./content/baseline.json",
+    "uniform:pull:components": "uniform canvas component pull ./content/baseline.json",
+    "uniform:pull:compositions": "uniform canvas composition pull ./content/baseline.json",
+    "uniform:pull:project-map-definitions": "uniform project-map definition pull ./content/baseline.json",
+    "uniform:pull:project-map-nodes": "uniform project-map node pull ./content/baseline.json",
     "uniform:pull": "run-s uniform:pull:components uniform:pull:compositions uniform:pull:project-map-definitions uniform:pull:project-map-nodes",
-    "uniform:push:components": "uniform canvas component push ./content/component-starter-kit.json",
-    "uniform:push:compositions": "uniform canvas composition push ./content/component-starter-kit.json",
-    "uniform:push:project-map-definitions": "uniform project-map definition push ./content/component-starter-kit.json",
-    "uniform:push:project-map-nodes": "uniform project-map node push ./content/component-starter-kit.json",
-    "uniform:publish": "uniform canvas composition push ./content/component-starter-kit.json --state published",
+    "uniform:push:datatype": "uniform canvas datatype push ./content/baseline.json",
+    "uniform:push:components": "uniform canvas component push ./content/baseline.json",
+    "uniform:push:compositions": "uniform canvas composition push ./content/baseline.json",
+    "uniform:push:project-map-definitions": "uniform project-map definition push ./content/baseline.json",
+    "uniform:push:project-map-nodes": "uniform project-map node push ./content/baseline.json",
+    "uniform:publish": "uniform canvas composition push ./content/baseline.json --state published",
     "uniform:push": "run-s uniform:push:components uniform:push:compositions uniform:push:project-map-definitions uniform:push:project-map-nodes",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@uniformdev/canvas-next": "19.27.0",
-    "@uniformdev/context-next": "19.27.0",
-    "@uniformdev/context-react": "19.27.0",
+    "@contentful/rich-text-html-renderer": "^16.1.0",
+    "@contentful/rich-text-types": "^16.2.0",
+    "@uniformdev/canvas-next": "19.30.0",
+    "@uniformdev/context-next": "19.30.0",
+    "@uniformdev/context-react": "19.30.0",
     "@vercel/og": "^0.5.7",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
-    "next": "13.4.6",
+    "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
+    "react-player": "^2.12.0",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
@@ -58,13 +63,13 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "@typescript-eslint/types": "^5.60.0",
-    "@uniformdev/cli": "19.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/types": "^5.61.0",
+    "@uniformdev/cli": "19.30.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.7",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.8",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.11",
@@ -76,6 +81,6 @@
     "storybook-addon-themes": "^6.1.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "5.0.4"
+    "typescript": "5.1.6"
   }
 }
