added new Sync CLI command and use new UniformSlot property - wrapperComponent

--- a/package.json
+++ b/package.json
@@ -17,28 +17,17 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "pull:manifest": "uniform context manifest download --output ./src/context/manifest.json",
-    "uniform:pull:datatype": "uniform canvas datatype pull ./content/baseline.json",
-    "uniform:pull:components": "uniform canvas component pull ./content/baseline.json",
-    "uniform:pull:compositions": "uniform canvas composition pull ./content/baseline.json",
-    "uniform:pull:project-map-definitions": "uniform project-map definition pull ./content/baseline.json",
-    "uniform:pull:project-map-nodes": "uniform project-map node pull ./content/baseline.json",
-    "uniform:pull": "run-s uniform:pull:components uniform:pull:compositions uniform:pull:project-map-definitions uniform:pull:project-map-nodes",
-    "uniform:push:datatype": "uniform canvas datatype push ./content/baseline.json",
-    "uniform:push:components": "uniform canvas component push ./content/baseline.json",
-    "uniform:push:compositions": "uniform canvas composition push ./content/baseline.json",
-    "uniform:push:project-map-definitions": "uniform project-map definition push ./content/baseline.json",
-    "uniform:push:project-map-nodes": "uniform project-map node push ./content/baseline.json",
-    "uniform:publish": "uniform canvas composition push ./content/baseline.json --state published",
-    "uniform:push": "run-s uniform:push:components uniform:push:compositions uniform:push:project-map-definitions uniform:push:project-map-nodes",
+    "uniform:pull": "uniform sync pull",
+    "uniform:push": "uniform sync push",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.1.0",
     "@contentful/rich-text-types": "^16.2.0",
-    "@uniformdev/canvas-next": "19.35.2",
-    "@uniformdev/context-next": "19.35.2",
-    "@uniformdev/context-react": "19.35.2",
+    "@uniformdev/canvas-next": "19.40.1-alpha.16",
+    "@uniformdev/context-next": "19.40.1-alpha.16",
+    "@uniformdev/context-react": "19.40.1-alpha.16",
     "@vercel/og": "^0.5.7",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
@@ -66,7 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@typescript-eslint/types": "^5.57.0",
-    "@uniformdev/cli": "19.35.2",
+    "@uniformdev/cli": "19.40.1-alpha.16",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
     "eslint-config-next": "^13.2.4",
