fix: updated canvas cache

--- a/content/components/navigationMenuSectionLink.yaml
+++ b/content/components/navigationMenuSectionLink.yaml
@@ -10,8 +10,8 @@ parameters:
     type: text
     helpText: ''
     typeConfig: null
-  - id: links
-    name: Links
+  - id: link
+    name: Link
     type: link
     helpText: ''
     typeConfig: null
