chore: uniform packages 9.67.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-starter-kit",
-  "version": "5.0.3",
+  "version": "5.0.4",
   "private": true,
   "engines": {
     "npm": ">=8.19.0",
@@ -41,19 +41,19 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.1.0",
     "@contentful/rich-text-types": "^16.2.0",
-    "@uniformdev/canvas": "19.63.2",
-    "@uniformdev/canvas-next": "19.63.2",
-    "@uniformdev/canvas-react": "19.63.2",
-    "@uniformdev/context": "19.63.2",
-    "@uniformdev/context-next": "19.63.2",
-    "@uniformdev/context-react": "19.63.2",
-    "@uniformdev/project-map": "19.63.2",
-    "@uniformdev/richtext": "19.63.2",
+    "@uniformdev/canvas": "19.67.0",
+    "@uniformdev/canvas-next": "19.67.0",
+    "@uniformdev/canvas-react": "19.67.0",
+    "@uniformdev/context": "19.67.0",
+    "@uniformdev/context-next": "19.67.0",
+    "@uniformdev/context-react": "19.67.0",
+    "@uniformdev/project-map": "19.67.0",
+    "@uniformdev/richtext": "19.67.0",
     "@vercel/og": "^0.5.7",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "framer-motion": "10.16.2",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
@@ -82,7 +82,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@typescript-eslint/types": "^6.4.0",
-    "@uniformdev/cli": "19.63.2",
+    "@uniformdev/cli": "19.67.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
