fix: header, global group opened by default [UNI-3612]

--- a/content/components/header.yaml
+++ b/content/components/header.yaml
@@ -19,7 +19,7 @@ parameters:
     name: Global
     type: group
     typeConfig:
-      collapsed: true
+      collapsed: false
       childrenParams:
         - theme
         - primaryFont
