--- a/package.json
+++ b/package.json
@@ -63,14 +63,14 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.7",
-    "@storybook/addon-interactions": "^7.0.7",
-    "@storybook/addon-links": "^7.0.7",
+    "@storybook/addon-essentials": "7.0.7",
+    "@storybook/addon-interactions": "7.0.7",
+    "@storybook/addon-links": "7.0.7",
     "@storybook/addon-styling": "^1.0.3",
-    "@storybook/blocks": "^7.0.7",
-    "@storybook/nextjs": "^7.0.7",
+    "@storybook/blocks": "7.0.7",
+    "@storybook/nextjs": "7.0.7",
     "@storybook/preview-api": "7.0.7",
-    "@storybook/react": "^7.0.7",
+    "@storybook/react": "7.0.7",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/color": "^3.0.3",
@@ -93,7 +93,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^3.0.2",
-    "storybook": "^7.0.7",
+    "storybook": "7.0.7",
     "storybook-addon-themes": "^6.1.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
