feat: disable personalization without consent

--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.1.0",
     "@contentful/rich-text-types": "^16.2.0",
-    "@uniformdev/canvas": "19.146.2",
-    "@uniformdev/canvas-next": "19.146.2",
-    "@uniformdev/canvas-react": "19.146.2",
-    "@uniformdev/context": "19.146.2",
-    "@uniformdev/context-next": "19.146.2",
-    "@uniformdev/context-react": "19.146.2",
-    "@uniformdev/project-map": "19.146.2",
-    "@uniformdev/richtext": "19.146.2",
+    "@uniformdev/canvas": "19.190.1-alpha.5",
+    "@uniformdev/canvas-next": "19.190.1-alpha.5",
+    "@uniformdev/canvas-react": "19.190.1-alpha.5",
+    "@uniformdev/context": "19.190.1-alpha.5",
+    "@uniformdev/context-next": "19.190.1-alpha.5",
+    "@uniformdev/context-react": "19.190.1-alpha.5",
+    "@uniformdev/project-map": "19.190.1-alpha.5",
+    "@uniformdev/richtext": "19.190.1-alpha.5",
     "@vercel/og": "^0.5.7",
     "classnames": "^2.3.2",
     "cookies-next": "4.1.1",
@@ -74,7 +74,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@typescript-eslint/types": "^6.4.0",
-    "@uniformdev/cli": "19.146.2",
+    "@uniformdev/cli": "19.190.1-alpha.5",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.47.0",
     "eslint-config-custom": "*",
