feat: enable ntlf edge mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,12 @@
     "tsup",
     "uniformdev",
     "unoptimized"
-  ]
+  ],
+  "deno.enable": true,
+  "deno.enablePaths": [
+    "netlify/edge-functions"
+  ],
+  "deno.unstable": true,
+  "deno.importMap": ".netlify/edge-functions-import-map.json",
+  "deno.path": "/Users/alexshyba/Library/Preferences/netlify/deno-cli/deno"
 }
