--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "uniform:publish": "uniform context manifest publish",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "postinstall": "cd cli-run && npm install && npm run build && cd ../cli-scaffold && npm install && npm run build",
     "cli": "npm i && cd cli-run && node dist/index.mjs",
-    "scaffold": "npm i && node cli-scaffold/dist/index.mjs"
+    "scaffold": "npm i && node cli-scaffold/dist/index.mjs",
+    "copy:deno": "shx cp node_modules/@uniformdev/context-edge-netlify/dist/index.deno.js src/context",
+    "postinstall": "npm run copy:deno && cd cli-run && npm install && npm run build && cd ../cli-scaffold && npm install && npm run build"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.1.0",
@@ -37,6 +38,7 @@
     "@uniformdev/context": "19.190.1-alpha.5",
     "@uniformdev/context-next": "19.190.1-alpha.5",
     "@uniformdev/context-react": "19.190.1-alpha.5",
+    "@uniformdev/context-edge-netlify": "19.190.1-alpha.5",
     "@uniformdev/project-map": "19.190.1-alpha.5",
     "@uniformdev/richtext": "19.190.1-alpha.5",
     "@vercel/og": "^0.5.7",
@@ -84,6 +86,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^3.0.2",
+    "shx": "^0.3.4",
     "shared": "*",
     "storybook": "7.5.3",
     "storybook-addon-themes": "^6.1.0",
