--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@uniformdev/richtext": "19.207.0",
     "@vercel/og": "^0.5.7",
     "classnames": "^2.3.2",
-    "cookies-next": "4.1.1",
+    "cookies-next": "^4.3.0",
     "daisyui": "^3.9.3",
     "framer-motion": "10.16.2",
     "next": "^14.2.18",
@@ -85,7 +85,7 @@
     "postcss": "^8.4.23",
     "prettier": "^3.0.2",
     "shared": "*",
-    "storybook": "7.5.3",
+    "storybook": "^7.6.20",
     "storybook-addon-themes": "^6.1.0",
     "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
